--- a/checkmates-site/c-styles.css
+++ b/checkmates-site/c-styles.css
@@ -104,21 +104,15 @@ img:hover {
         width: 90%;
     }
 
-    .gallery .gallery-item:nth-child(2) {
+    /* Hide all gallery items by default */
+    .gallery .gallery-item {
         display: none;
     }
 
-    .gallery:nth-child(2) .gallery-item:nth-child(1) {
-        display: none;
-    }
-    .gallery:nth-child(2) .gallery-item:nth-child(2) {
-        display: block;
-    }
-
-    .gallery:nth-child(3) .gallery-item:nth-child(1) {
-        display: none;
-    }
-    .gallery:nth-child(3) .gallery-item:nth-child(2) {
+    /* Show only one specific item per gallery */
+    .gallery:nth-of-type(1) .gallery-item:nth-child(1),
+    .gallery:nth-of-type(2) .gallery-item:nth-child(1),
+    .gallery:nth-of-type(3) .gallery-item:nth-child(1) {
         display: block;
     }
     
