--- a/checkmates-site/c-styles.css
+++ b/checkmates-site/c-styles.css
@@ -33,8 +33,9 @@ h1::before, h1::after {
 }
 
 .play-button {
+   position: float;
    top: 20px;
-   left: 30px;
+   right: 30px;
    z-index: 100;
 }
 
