--- a/checkmates-site/c-styles.css
+++ b/checkmates-site/c-styles.css
@@ -33,10 +33,10 @@ h1::before, h1::after {
 }
 
 .play-button {
-   position: fixed;
    top: 20px;
    right: 30px;
    z-index: 100;
+   text-align: right;
 }
 
 .play-button a {
