--- a/checkmates-site/c-styles.css
+++ b/checkmates-site/c-styles.css
@@ -135,8 +135,9 @@ img:hover {
     }
 
     .play-button {
-       top: 10px;
-       right: 15px;
+       position: static;
+       text-align: center;
+       margin: 10px auto;
    }
    
    .play-button a {
