--- a/checkmates-site/c-styles.css
+++ b/checkmates-site/c-styles.css
@@ -151,5 +151,28 @@ img:hover {
     .gallery {
         padding: 35px;
     }
+
+    .intro {
+        font-size: 1em;
+        line-height: 1.5;
+        margin: 0 auto 30px;
+        padding: 0 15px;
+        max-width: 100%;
+    }
+.chess-link {
+        padding: 2px 0;
+    }
+
+    /* Remove hover effects on mobile since they don't make sense */
+    .chess-link:hover::after {
+        transform: scaleX(1);
+    }
+
+    /* Always show underline on mobile for better visibility */
+    .chess-link::after {
+        transform: scaleX(1);
+        height: 1px;
+        opacity: 0.7;
+    }
     
 }
